--- a/.github/workflows/on_pull_opened_or_edited.yml
+++ b/.github/workflows/on_pull_opened_or_edited.yml
@@ -28,8 +28,8 @@ jobs:
         uses: actions/github-script@v3
         id: pull-request
         with:
-          github-actions-managed: true
           script: |
+            // github-actions-managed: true
             let pullRequest = null;
             if (context.payload.inputs && context.payload.inputs.number) {
               const number = context.payload.inputs.number;
@@ -51,8 +51,7 @@ jobs:
             }
 
             if (!pullRequest) {
-              core.error(`Cannot find Pull Request`);
-              return;
+              throw new Error(`Cannot find Pull Request`);
             }
 
             core.setOutput('branch', pullRequest.head.ref);
@@ -62,19 +61,16 @@ jobs:
             return true;
       - name: Analyze PR notes
         id: notes
-        if: steps.pull-request.outputs.result
-        uses: vemel/nextchange@main
+        uses: vemel/nextchange@0.1.0
         with:
           github-actions-managed: true
-          github-actions-comment: Create Release notes from Pull Request notes in output
           set: ${{ steps.pull-request.outputs.body }}
       - name: Update Pull Request labels
         id: update-labels
         uses: actions/github-script@v3
-        if: steps.pull-request.outputs.result
         with:
-          github-actions-managed: true
           script: |
+            // github-actions-managed: true
             // get suggested patch, minor or major label from pull request notes
             const number = ${{ steps.pull-request.outputs.number }};
             const branch = ${{ toJSON(steps.pull-request.outputs.branch) }};
