--- a/.github/workflows/on_push_check.yml
+++ b/.github/workflows/on_push_check.yml
@@ -31,6 +31,7 @@ jobs:
           - 3.9
     steps:
       - name: Add PYTHONUSERBASE to PATH
+        id: add-pythonuserbase
         run: |
           # github-actions-managed: true
           echo '${{ env.PYTHONUSERBASE }}/bin/' >> $GITHUB_PATH
@@ -68,6 +69,11 @@ jobs:
               python -m pip install -U poetry
               python -m poetry config virtualenvs.create false
               python -m poetry install -n
+          fi
+          if test -f "tox.ini"; then
+              echo "tox.ini found, installing using tox"
+              python -m pip install -U tox
+              python -m tox
           fi
           if test -f "requirements.txt"; then
               echo "requirements.txt found, installing using pip"
