--- a/.github/workflows/on_release_pull_merged.yml
+++ b/.github/workflows/on_release_pull_merged.yml
@@ -22,22 +22,13 @@ jobs:
   publish-to-pypi:
     runs-on: ubuntu-latest
     steps:
-      - name: Check Secrets
-        id: secrets
-        uses: actions/github-script@v3
-        env:
-          PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-        with:
-          github-actions-managed: true
-          script: |
-            process.env.PYPI_PASSWORD && core.setOutput("PYPI_PASSWORD", true);
       - name: Get Pull Request
         id: pull-request
-        if: steps.secrets.outputs.PYPI_PASSWORD
+        if: env.PYPI_PASSWORD
         uses: actions/github-script@v3
         with:
-          github-actions-managed: true
           script: |
+            // github-actions-managed: true
             let pullRequest = null;
             if (context.payload.inputs && context.payload.inputs.number) {
               // find Pull Request by number fom input
