--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ logchange =
 
 [flake8]
 max-line-length = 100
-exclude = .git,__pycache__,docs,build,dist,test_*.py
+exclude = .git,__pycache__,docs,build,dist,test_*.py,.cache
 ignore = E203,W503,E501
 max-complexity = 14
 
